[gd_scene load_steps=19 format=4 uid="uid://b3w4cdvomh5ps"]

[ext_resource type="Script" uid="uid://mlrt2xbqf676" path="res://level/map_1.gd" id="1_x2nsn"]
[ext_resource type="Script" uid="uid://bu8twdsyqkjst" path="res://enemies/enemy_spawner.gd" id="2_0mbol"]
[ext_resource type="TileSet" uid="uid://dr21qwlvwkl3k" path="res://assets/dungeon_tileset.tres" id="2_xqnyh"]
[ext_resource type="PackedScene" uid="uid://c4sbicclljd2k" path="res://enemies/enemy_blob.tscn" id="4_te76q"]
[ext_resource type="PackedScene" uid="uid://bwdjwh0iqyt3u" path="res://enemies/enemy_Bigblob.tscn" id="5_ajqrm"]
[ext_resource type="Script" uid="uid://3ba16m8jk3m7" path="res://global_scripts/camera_control.gd" id="5_ju02a"]
[ext_resource type="PackedScene" uid="uid://fl14bp1avhb1" path="res://enemies/enemy_rat.tscn" id="6_8h20c"]
[ext_resource type="PackedScene" uid="uid://ba38nj0btldu" path="res://enemies/enemy_skelly.tscn" id="7_k853c"]
[ext_resource type="PackedScene" uid="uid://hyo4fheurf6a" path="res://enemies/enemy_ghoul.tscn" id="7_tjhul"]
[ext_resource type="Script" uid="uid://d3jxh40rncv1r" path="res://addons/wfc/nodes/generator_2d.gd" id="8_ho4ds"]
[ext_resource type="PackedScene" uid="uid://31ylsc7xyikq" path="res://enemies/enemy_blobman.tscn" id="8_tjhul"]
[ext_resource type="PackedScene" uid="uid://lyi1k2as5ibc" path="res://enemies/enemy_goblin.tscn" id="8_tpro3"]
[ext_resource type="Script" uid="uid://douto1nsqbvyv" path="res://addons/wfc/solver/solver_settings.gd" id="9_8pvme"]
[ext_resource type="Script" uid="uid://bf17ls25tbdt2" path="res://level/map_cluster_loader.gd" id="11_71hfl"]
[ext_resource type="Script" uid="uid://wq4yvi4md1ry" path="res://level/room_generator.gd" id="11_jybjd"]
[ext_resource type="PackedScene" uid="uid://b47jkx1ecyfor" path="res://enemies/enemy_bigger_goblin.tscn" id="11_tpro3"]

[sub_resource type="Environment" id="Environment_eckay"]
background_mode = 3
adjustment_enabled = true
adjustment_contrast = 1.16

[sub_resource type="Resource" id="Resource_uu3pm"]
script = ExtResource("9_8pvme")
allow_backtracking = true
require_backtracking = false
backtracking_limit = -1
sparse_history_start = 10
sparse_history_interval = 10
force_ac3 = true

[node name="Main" type="Node"]
script = ExtResource("1_x2nsn")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_eckay")

[node name="Geometry" type="Node2D" parent="."]
texture_filter = 1
scale = Vector2(1.0059, 1.00884)

[node name="ground_layer" type="TileMapLayer" parent="Geometry"]
texture_filter = 1
scale = Vector2(1, 0.999999)
tile_set = ExtResource("2_xqnyh")

[node name="wall_layer" type="TileMapLayer" parent="Geometry"]
texture_filter = 1
position = Vector2(-1.98827, 0)
tile_set = ExtResource("2_xqnyh")

[node name="example" type="TileMapLayer" parent="Geometry"]
texture_filter = 1
position = Vector2(-2196.04, 62.448)
tile_map_data = PackedByteArray("AAD//wAAAQAFAAQAAAD6//3/AQACAAMAAAD6//7/AQAEAAQAAAD6/wEAAQAEAAcAAAD6/wIAAQAEAAgAAAD6/wMAAQAEAAkAAAD6/wQAAQAEAAoAAAD6/wUAAQAEAAsAAAD7//3/AQAFAAMAAAD7//7/AQAFAAQAAAD7////AQAFAAQAAAD7/wAAAQAFAAQAAAD7/wEAAQAFAAcAAAD7/wIAAQAFAAgAAAD7/wMAAQAFAAkAAAD7/wQAAQAFAAoAAAD7/wUAAQAFAAsAAAD8//3/AQAFAAMAAAD8//7/AQAFAAQAAAD8/wAAAQAFAAQAAAD8/wEAAQAGAAcAAAD8/wIAAQAGAAgAAAD8/wMAAQAGAAkAAAD8/wQAAQAGAAoAAAD8/wUAAQAGAAsAAAD9//3/AQAFAAMAAAD9//7/AQAFAAQAAAD9/wAAAQAFAAQAAAD9/wEAAQAHAAcAAAD9/wIAAQAHAAgAAAD9/wMAAQAHAAkAAAD9/wQAAQAHAAoAAAD9/wUAAQAHAAsAAAD+//3/AQAFAAMAAAD+//7/AQAFAAQAAAD+/wAAAQAFAAQAAAD+/wEAAQAbAAcAAAD+/wIAAQAbAAgAAAD+/wMAAQAbAAkAAAD+/wQAAQAbAAoAAAD+/wUAAQAbAAsAAAD///3/AQAFAAMAAAD///7/AQAFAAQAAAD//wEAAQAGAAcAAAD//wIAAQAGAAgAAAD//wMAAQAGAAkAAAD//wQAAQAGAAoAAAD//wUAAQAGAAsAAAAAAP3/AQAFAAMAAAAAAP7/AQAFAAQAAAAAAAAAAQAFAAQAAAAAAAEAAQAbAAcAAAAAAAIAAQAbAAgAAAAAAAMAAQAbAAkAAAABAP3/AQAFAAMAAAABAP7/AQAFAAQAAAABAAAAAQAFAAQAAAABAAEAAQALAAcAAAABAAIAAQALAAgAAAABAAMAAQALAAkAAAABAAQAAQALAAoAAAABAAUAAQALAAsAAAACAP3/AQAFAAMAAAACAP7/AQAFAAQAAAACAAAAAQAFAAQAAAACAAEAAQANAAcAAAACAAIAAQANAAgAAAACAAMAAQANAAkAAAACAAQAAQANAAoAAAADAP3/AQAFAAMAAAADAP7/AQAFAAQAAAADAAAAAQAFAAQAAAADAAEAAQANAAcAAAADAAIAAQANAAgAAAADAAMAAQANAAkAAAADAAQAAQANAAoAAAAEAP3/AQAFAAMAAAAEAP7/AQAFAAQAAAAEAP//AQAFAAQAAAAEAAAAAQAFAAQAAAAEAAEAAQAOAAcAAAAEAAIAAQAOAAgAAAAEAAMAAQAOAAkAAAAEAAQAAQAOAAoAAAAFAP3/AQARAAMAAAAFAP7/AQAPAAQAAAAFAP//AQAPAAUAAAAFAAAAAQAPAAYAAAAFAAEAAQAPAAcAAAAFAAIAAQAPAAgAAAAFAAMAAQAPAAkAAAAFAAQAAQAPAAoAAAD5//z/AQAAAAAAAAD5//3/AQAAAAAAAAD5//7/AQAAAAAAAAD5////AQAAAAAAAAD5/wMAAQADAAoAAAD6/wAAAQAEAAYAAAD6////AQAEAAUAAAAGAP3/AQAAAAAAAAAGAP7/AQAAAAAAAAAGAP//AQAAAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAQAAoAAAAGAAIAAQAQAAoAAAAGAAMAAQAQAAoAAAAGAAQAAQAQAAoAAAD5/wUAAQADAAsAAAD5/wQAAQADAAoAAAD5/wIAAQADAAoAAAD5/wEAAQADAAoAAAD5/wAAAQAAAAAAAAD5//v/AQAAAAAAAAAGAPv/AQAAAAAAAAD6//v/AQAAAAAAAAD7//v/AQAAAAAAAAD8//v/AQAAAAAAAAD9//v/AQAAAAAAAAD+//v/AQAAAAAAAAD///v/AQAAAAAAAAAAAPv/AQAAAAAAAAABAPv/AQAAAAAAAAACAPv/AQAAAAAAAAADAPv/AQAAAAAAAAAEAPv/AQAAAAAAAAAFAPv/AQAAAAAAAAACAAUAAQANAAsAAAADAAUAAQANAAsAAAAEAAUAAQAOAAsAAAAFAAUAAQAPAAsAAAAGAAUAAQAQAAsAAAAAAAQAAQAbAAoAAAAAAAUAAQAbAAsAAAD5/wYAAQAAAAAAAAD6/wYAAQAAAAAAAAD7/wYAAQAAAAAAAAD8/wYAAQAAAAAAAAD9/wYAAQAAAAAAAAD+/wYAAQAAAAAAAAD//wYAAQAAAAAAAAAAAAYAAQAAAAAAAAABAAYAAQAAAAAAAAACAAYAAQAAAAAAAAADAAYAAQAAAAAAAAAEAAYAAQAAAAAAAAAFAAYAAQAAAAAAAAAGAAYAAQAAAAAAAAAHAPv/AQAAAAAAAAAHAPz/AQAAAAAAAAAHAP3/AQAAAAAAAAAHAP7/AQAAAAAAAAAHAP//AQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAD4//v/AQAAAAAAAAD4//z/AQAAAAAAAAD4//3/AQAAAAAAAAD4//7/AQAAAAAAAAD4/wQAAQAAAAAAAAD4/wUAAQAAAAAAAADw//v/AQAAAAAAAADw//z/AQAAAAAAAADw//3/AQAAAAAAAADw//7/AQAAAAAAAADw////AQAAAAAAAADx//v/AQAAAAAAAADx//z/AQAAAAAAAADx//3/AQAAAAAAAADx//7/AQAAAAAAAADx////AQAAAAAAAADy//v/AQAAAAAAAADy//z/AQAAAAAAAADy//3/AQAAAAAAAADy//7/AQAAAAAAAADy////AQAAAAAAAADz//v/AQAAAAAAAADz//z/AQAAAAAAAADz//3/AQAAAAAAAADz//7/AQAAAAAAAADz////AQAAAAAAAAD0//v/AQAAAAAAAAD0//z/AQAAAAAAAAD0//3/AQAAAAAAAAD0//7/AQAAAAAAAAD0////AQAAAAAAAAD1//v/AQAAAAAAAAD1//z/AQAAAAAAAAD1//3/AQAAAAAAAAD1//7/AQAAAAAAAAD2//v/AQAAAAAAAAD2//z/AQAAAAAAAAD2//3/AQAAAAAAAAD2//7/AQAAAAAAAAD3//v/AQAAAAAAAAD3//z/AQAAAAAAAAD3//3/AQAAAAAAAAD3//7/AQAAAAAAAAD8////AQAFAAQAAAD9////AQAFAAQAAAD+////AQAFAAQAAAD/////AQAFAAQAAAAAAP//AQAFAAQAAAABAP//AQAFAAQAAAACAP//AQAFAAQAAAADAP//AQAFAAQAAAD3//r/AQAAAAAAAAD4//r/AQAAAAAAAAD5//r/AQAAAAAAAAD6//r/AQAAAAAAAAD6//z/AQAAAAAAAAD7//r/AQAAAAAAAAD7//z/AQAAAAAAAAD8//r/AQAAAAAAAAD8//z/AQAAAAAAAAD9//r/AQAAAAAAAAD9//z/AQAAAAAAAAD+//r/AQAAAAAAAAD+//z/AQAAAAAAAAD///r/AQAAAAAAAAD///z/AQAAAAAAAAAAAPr/AQAAAAAAAAAAAPz/AQAAAAAAAAABAPr/AQAAAAAAAAABAPz/AQAAAAAAAAACAPr/AQAAAAAAAAACAPz/AQAAAAAAAAADAPr/AQAAAAAAAAADAPz/AQAAAAAAAAAEAPr/AQAAAAAAAAAEAPz/AQAAAAAAAAAFAPr/AQAAAAAAAAAFAPz/AQAAAAAAAAAGAPr/AQAAAAAAAAAGAPz/AQAAAAAAAAAHAPr/AQAAAAAAAAAIAPr/AQAAAAAAAAAIAPv/AQAAAAAAAAAIAPz/AQAAAAAAAAAMAAAAAQAmABAAAAAMAAEAAQAmABEAAAAMAAIAAQAmABIAAAAMAAMAAQAmABMAAAAMAAQAAQAmABQAAAAMAAUAAQAmABUAAAANAAAAAQAnABAAAAANAAEAAQAnABEAAAANAAIAAQAnABIAAAANAAMAAQAnABMAAAANAAQAAQAnABQAAAANAAUAAQAnABUAAAAOAAAAAQAoABAAAAAOAAEAAQAoABEAAAAOAAIAAQAoABIAAAAOAAMAAQAoABMAAAAOAAQAAQAoABQAAAAOAAUAAQAoABUAAAAPAAAAAQApABAAAAAPAAEAAQApABEAAAAPAAIAAQApABIAAAAPAAMAAQApABMAAAAPAAQAAQApABQAAAAPAAUAAQApABUAAAAQAAAAAQAqABAAAAAQAAEAAQAqABEAAAAQAAIAAQAqABIAAAAQAAMAAQAqABMAAAAQAAQAAQAqABQAAAAQAAUAAQAqABUAAAARAAAAAQArABAAAAARAAEAAQArABEAAAARAAIAAQArABIAAAARAAMAAQArABMAAAARAAQAAQArABQAAAARAAUAAQArABUAAAAUAAAAAQAoABAAAAAUAAEAAQAoABEAAAAUAAIAAQAoABIAAAAUAAMAAQAoABMAAAAUAAQAAQAoABQAAAAUAAUAAQAoABUAAAAVAAAAAQAoABAAAAAVAAEAAQAoABEAAAAVAAIAAQAoABIAAAAVAAMAAQAoABMAAAAVAAQAAQAoABQAAAAVAAUAAQAoABUAAAAYAAEAAQAmABMAAAAZAAEAAQAnABMAAAAaAAEAAQAoABMAAAAbAAEAAQApABMAAAAcAAEAAQAqABMAAAAdAAEAAQArABMAAAAYAAIAAQAmABMAAAAZAAIAAQAnABMAAAAaAAIAAQAoABMAAAAbAAIAAQApABMAAAAcAAIAAQAqABMAAAAdAAIAAQArABMAAAAIAP3/AQAAAAAAAAAIAP7/AQAAAAAAAAAIAP//AQAAAAAAAAAJAPz/AQAAAAAAAAAJAP3/AQAAAAAAAAAJAP7/AQAAAAAAAAAJAP//AQAAAAAAAAAKAPz/AQAAAAAAAAAKAP3/AQAAAAAAAAAKAP7/AQAAAAAAAAAKAP//AQAAAAAAAAALAPz/AQAAAAAAAAALAP3/AQAAAAAAAAALAP7/AQAAAAAAAAALAP//AQAAAAAAAAAMAPz/AQAAAAAAAAAMAP3/AQAAAAAAAAAMAP7/AQAAAAAAAAAMAP//AQAAAAAAAAANAPz/AQAAAAAAAAANAP3/AQAAAAAAAAANAP7/AQAAAAAAAAANAP//AQAAAAAAAAAOAPz/AQAAAAAAAAAOAP3/AQAAAAAAAAAOAP7/AQAAAAAAAAAOAP//AQAAAAAAAAAPAPz/AQAAAAAAAAAPAP3/AQAAAAAAAAAPAP7/AQAAAAAAAAAPAP//AQAAAAAAAAAQAPz/AQAAAAAAAAAQAP3/AQAAAAAAAAAQAP7/AQAAAAAAAAAQAP//AQAAAAAAAAARAPz/AQAAAAAAAAARAP3/AQAAAAAAAAARAP7/AQAAAAAAAAARAP//AQAAAAAAAAASAPz/AQAAAAAAAAASAP3/AQAAAAAAAAASAP7/AQAAAAAAAAASAP//AQAAAAAAAAATAPz/AQAAAAAAAAATAP3/AQAAAAAAAAATAP7/AQAAAAAAAAATAP//AQAAAAAAAAAUAPz/AQAAAAAAAAAUAP3/AQAAAAAAAAAUAP7/AQAAAAAAAAAUAP//AQAAAAAAAAAVAPz/AQAAAAAAAAAVAP3/AQAAAAAAAAAVAP7/AQAAAAAAAAAVAP//AQAAAAAAAAAWAPz/AQAAAAAAAAAWAP3/AQAAAAAAAAAWAP7/AQAAAAAAAAAWAP//AQAAAAAAAAAXAPz/AQAAAAAAAAAXAP3/AQAAAAAAAAAXAP7/AQAAAAAAAAAXAP//AQAAAAAAAAAYAPz/AQAAAAAAAAAYAP3/AQAAAAAAAAAYAP7/AQAAAAAAAAAYAP//AQAAAAAAAAAZAPz/AQAAAAAAAAAZAP3/AQAAAAAAAAAZAP7/AQAAAAAAAAAZAP//AQAAAAAAAAAaAPz/AQAAAAAAAAAaAP3/AQAAAAAAAAAaAP7/AQAAAAAAAAAaAP//AQAAAAAAAAAbAPz/AQAAAAAAAAAbAP3/AQAAAAAAAAAbAP7/AQAAAAAAAAAbAP//AQAAAAAAAAAcAPz/AQAAAAAAAAAcAP3/AQAAAAAAAAAcAP7/AQAAAAAAAAAcAP//AQAAAAAAAAAdAPz/AQAAAAAAAAAdAP3/AQAAAAAAAAAdAP7/AQAAAAAAAAAdAP//AQAAAAAAAAALAAAAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAAMAAYAAQAAAAAAAAANAAYAAQAAAAAAAAAOAAYAAQAAAAAAAAAPAAYAAQAAAAAAAAAQAAYAAQAAAAAAAAARAAYAAQAAAAAAAAASAAYAAQAAAAAAAAASAAAAAQAAAAAAAAASAAEAAQAAAAAAAAASAAIAAQAAAAAAAAASAAMAAQAAAAAAAAASAAQAAQAAAAAAAAASAAUAAQAAAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAJAAAAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAA=")
tile_set = ExtResource("2_xqnyh")

[node name="negative_example" type="TileMapLayer" parent="Geometry"]
texture_filter = 1
position = Vector2(-5999.6, 659.173)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAUAAAAAAAEAAAAAAAUAAAAAAAIAAAAAAAUAAAAAAAMAAAAAAAUAAAAAAAQAAAAAAAUAAAA=")
tile_set = ExtResource("2_xqnyh")

[node name="EnemySpawnerJob" type="Node" parent="Geometry"]
script = ExtResource("2_0mbol")
enemy_tscn_files = Array[PackedScene]([ExtResource("4_te76q"), ExtResource("5_ajqrm"), ExtResource("6_8h20c"), ExtResource("7_k853c"), ExtResource("8_tpro3")])
enemy_number_max_deviation = 2
big_boi_files = Array[PackedScene]([ExtResource("7_tjhul"), ExtResource("8_tjhul"), ExtResource("11_tpro3")])
big_boi_room_numbers = Array[int]([9])

[node name="Camera2D" type="Camera2D" parent="Geometry"]
position = Vector2(594.493, 401.451)
scale = Vector2(1, 1.034)
position_smoothing_speed = 30.0
script = ExtResource("5_ju02a")
margin = Vector2(200, 200)

[node name="WFC2DGenerator" type="Node" parent="Geometry"]
script = ExtResource("8_ho4ds")
target = NodePath("../wall_layer")
rect = Rect2i(3, 9, 119, 67)
positive_sample = NodePath("../example")
solver_settings = SubResource("Resource_uu3pm")

[node name="RoomGenerator" type="Node" parent="Geometry"]
script = ExtResource("11_jybjd")
position = Vector2i(22, 29)
direction = Vector2i(-1, 0)
min_walk_distance = 40
max_walk_distance = 60
corridor_width = 10
maximum_rooms = 10
min_room_size = 20
max_room_size = 30

[node name="CanvasModulate" type="CanvasModulate" parent="Geometry"]
position = Vector2(0, -0.991237)
scale = Vector2(0.994135, 0.991237)
color = Color(0.907942, 0.907942, 0.907942, 1)

[node name="MapClusterLoader" type="Node" parent="Geometry" node_paths=PackedStringArray("room_generator", "wall_layer", "ground_layer")]
script = ExtResource("11_71hfl")
room_generator = NodePath("../RoomGenerator")
wall_layer = NodePath("../wall_layer")
ground_layer = NodePath("../ground_layer")
tile_size = Vector2i(16, 16)
terrain_ground_id = 1
background_filler_atlas_coords = Array[Vector2i]([Vector2i(12, 0), Vector2i(13, 0), Vector2i(14, 0), Vector2i(12, 1), Vector2i(13, 1), Vector2i(14, 1)])

[node name="UI" type="CanvasLayer" parent="."]
